--- a/source/dialogs/depth-track-properties/depth-track-properties-modal.html
+++ b/source/dialogs/depth-track-properties/depth-track-properties-modal.html
@@ -45,7 +45,7 @@
                                     <div class="col-sm-7">
                                         <div class="float-left">
                                             <button type="button" ng-click="wiModal.trackBackground();"
-                                                    ng-style="{'background-color':wiModal.props.trackBackground}"
+                                                    ng-style="{'background-color':wiModal.props.color}"
                                                     class="form-control wi-form-control width-80px thick-border">
                                             </button>
                                         </div>
@@ -59,7 +59,7 @@
                                 <div class="form-group">
                                     <label class="control-label col-sm-5 normal-text" for="width">Width (inchs)</label>
                                     <div class="col-sm-7">
-                                            <input type="number" step="0.001" class="form-control wi-form-control" id="width" ng-model="wiModal.props.geometryWidth">
+                                            <input type="number" step="0.001" class="form-control wi-form-control" id="width" ng-model="wiModal.props.width">
                                     </div>
                                 </div>
                             </div>
