--- a/source/dialogs/zone-track-properties/zone-track-properties-modal.html
+++ b/source/dialogs/zone-track-properties/zone-track-properties-modal.html
@@ -41,7 +41,7 @@
                                 <div class="col-sm-7">
                                     <div class="float-left">
                                         <button type="button" ng-click="wiModal.trackBackground();"
-                                                ng-style="{'background-color':wiModal.trackColor}"
+                                                ng-style="{'background-color':wiModal.color}"
                                                 class="form-control wi-form-control width-80px thick-border">
                                         </button>
                                     </div>
