--- a/source/dialogs/track-bulk-update/track-bulk-update-modal.html
+++ b/source/dialogs/track-bulk-update/track-bulk-update-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Track bulk update</h4>
+                <h4 class="modal-title"><span class="track-bolk-32x32"></span>&nbsp;Track bulk update</h4>
             </div>
             <div class="modal-body dialog-style">
                 <p></p>
