--- a/source/dialogs/auto-size-track/auto-size-track-modal.html
+++ b/source/dialogs/auto-size-track/auto-size-track-modal.html
@@ -63,7 +63,7 @@
 
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.onApplyButtonClicked()'><span class="apply-16x16"></span>Run</button>
+                <button class='btn btn-default' ng-click='wiModal.onApplyButtonClicked()'><span class="apply-16x16"></span>Apply</button>
                 <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>Ok</button>
                 <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>Cancel</button>
             </div>
