--- a/source/dialogs/image-properties/image-properties-modal.html
+++ b/source/dialogs/image-properties/image-properties-modal.html
@@ -34,8 +34,8 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-sm-4 panel-body text-center" style="padding-top: 0px">
-                                <img ng-show="wiModal.selected" ngf-thumbnail="wiModal.imageUrl" class="thumb">
+                            <div class="col-sm-4 panel-body text-center" style="padding-top: 0px; max-height: 106px; overflow: auto;">
+                                <img ng-show="wiModal.selected" ngf-src="wiModal.imageUrl" class="img-responsive" style="display: inline-block;">
                             </div>
                         </div>
                     </div>
@@ -54,9 +54,9 @@
                                 <label for="selected" class="btn btn-default">Select</label>
                             </div>
                             <div class="col-sm-7">
-                                <input name="imageFile" id="selected" class="display-none" type="file" accept="image/*" ngf-max-size="2MB" ngf-model-invalid="errorFile" ngf-select ng-model="wiModal.imageFile"/>
+                                <input name="imageFile" id="selected" class="display-none" type="file" accept="image/*" ngf-max-size="5MB" ngf-model-invalid="errorFile" ngf-select ng-model="wiModal.imageFile"/>
                                 <input type="text" class="form-control" value="{{wiModal.imageFile.name}}" disabled>
-                                <i ng-show="imageForm.file.$error.maxSize" style="color: red">File too large. Max 2Mb</i>
+                                <i ng-show="imageForm.imageFile.$error.maxSize" style="color: red">File too large. Max 5Mb</i>
                             </div>
                             <div class="col-sm-2">
                                 <button type="button" class="btn btn-default" ng-disabled="!wiModal.imageFile || !imageForm.$valid" ng-click="wiModal.onUploadButtonClicked()">
@@ -66,8 +66,8 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3 normal-text">Preview</label>
-                            <div class="col-sm-5">
-                                <img ng-show="imageForm.file.$valid" ngf-thumbnail="wiModal.imageFile" class="thumb">
+                            <div class="col-sm-8" style="max-height: 150px; overflow: auto;">
+                                <img ng-show="imageForm.imageFile.$valid" ngf-src="wiModal.imageFile" class="img-responsive">
                             </div>
                         </div>
                     </div>
@@ -94,15 +94,20 @@
                     </div>
                     <div class="form-group">
                         <label for="start-depth" class="control-label col-sm-3 normal-text">Start (depth)</label>
-                        <div class="col-sm-8">
+                        <div class="col-sm-9">
                             <input type="number" ng-change="wiModal.onPropsChange()" min="0" step="0.0001" class="form-control wi-form-control" id="start-depth" ng-model="wiModal.topDepth">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="start-depth" class="control-label col-sm-3 normal-text">End (depth)</label>
-                        <div class="col-sm-8">
+                        <div class="col-sm-9">
                             <input type="number" ng-change="wiModal.onPropsChange()" min="0" step="0.0001" class="form-control wi-form-control" id="end-depth" ng-model="wiModal.bottomDepth">
                         </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="isSmartDisplay" class="col-sm-3 normal-text">
+                            <input type="checkbox" ng-change="wiModal.onPropsChange()" id="isSmartDisplay" ng-model="wiModal.smartDisplay">Smart Display
+                        </label>
                     </div>
                 </form>
                 <p class="dialog-error" ng-if="wiModal.error">Error: {{wiModal.error}}</p>
@@ -115,9 +120,6 @@
         </div>
     </div>
     <style>
-        .thumb {
-            max-width: 100px;
-        }
         div.selectable {
             background: none;
             border: none;
