--- a/source/dialogs/save-curves/save-curves-modal.html
+++ b/source/dialogs/save-curves/save-curves-modal.html
@@ -8,7 +8,7 @@
             <div class="modal-body dialog-style">
                 <div class="progress" ng-repeat="item in wiModal.curvesData track by $index">
                     <div class="progress-bar progress-bar-striped bg-success" role="progressbar"
-                    aria-valuemin="0" aria-valuemax="100" ng-style="{width:item.percent}" style="min-width:2em">{{item.percent}} - {{item.datasetCurve}}</div>
+                    aria-valuemin="0" aria-valuemax="100" ng-style="{width:item.percent}" style="min-width:2em">{{item.percent}} - {{item.datasetName}}.{{item.name}}</div>
                 </div>
             </div>
         </div>
