fix sliding windows and crop view

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -9,6 +9,8 @@
     <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/css/themify-icons.css" rel="stylesheet">
 
+    <link rel="stylesheet" type="text/css" href="vendor/css/toastr.min.css">
+
     <!-- color picker -->
     <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-colorpicker.min.css">
     <link rel="stylesheet" type="text/css" href="css/color-picker.css">
@@ -16,7 +18,6 @@
     <link rel="stylesheet" type="text/css" href="vendor/css/multiple-select.css">
     <link rel="stylesheet" href="vendor/css/select.css">
     <link rel="stylesheet" type="text/css" href="css/dialogs.css">
-
 
     <link rel="stylesheet" href="css/sprite_16.css">
     <link rel="stylesheet" href="css/sprite_32.css">
@@ -96,6 +97,8 @@
 
     <!--select line style && line width-->
     <script src="vendor/js/angular-sanitize.min.js"></script>
+
+    <script src="vendor/js/toastr.min.js"></script>
 
     <script src="js/main.js.bundle.js"></script>
 
