--- a/source/dialogs/image-track-properties/image-track-properties-modal.html
+++ b/source/dialogs/image-track-properties/image-track-properties-modal.html
@@ -33,7 +33,7 @@
                         <div class="col-sm-7">
                             <div class="float-left">
                                 <button ng-click="wiModal.trackBackground();"
-                                        ng-style="{'background-color':wiModal.trackColor}"
+                                        ng-style="{'background-color':wiModal.background}"
                                         class="form-control wi-form-control width-80px thick-border">
                                 </button>
                             </div>
