--- a/source/dialogs/reference-windows/reference-windows-modal.html
+++ b/source/dialogs/reference-windows/reference-windows-modal.html
@@ -81,11 +81,11 @@
                                         <td ng-class="{'color-navy': $index == wiModal.SelectedRefCurve}" width="1%">
                                         </td>
                                         <td width="25%">
-                                            <ui-select ng-model="ref_curve.curve"
-                                                ng-change="wiModal.onSelectRefCurve($index, 'curve')">
-                                                <ui-select-match placeholder='Select a curve'>{{ref_curve.curve.name}}</ui-select-match>
+                                            <ui-select ng-model="ref_curve.idCurve"
+                                                ng-change="wiModal.onSelectRefCurve($index)">
+                                                <ui-select-match placeholder='Select a curve'>{{$select.selected.name}}</ui-select-match>
                                                 <ui-select-choices group-by="'datasetName'"
-                                                repeat='curve.properties as curve in wiModal.curvesArr | filter: {name:$select.search}'>
+                                                repeat='curve.id as curve in wiModal.curvesArr | filter: {name:$select.search} track by curve.id'>
                                                 <div class="padding-left-20px">{{curve.properties.name}}</div>
                                             </ui-select-choices>
                                             </ui-select>
